@@ -26,18 +26,36 @@ namespace System.Windows.Controls.Primitives {
 			for (int child_index = 0; child_index < InternalChildren.Count; child_index++) {
 				UIElement child = InternalChildren[child_index];
 				row_height = Math.Max(row_height, horizontal ? child.DesiredSize.Height : child.DesiredSize.Width);
-				double child_width  = GetDesiredChildWidth(child);
+				double child_width = GetDesiredChildWidth(child);
 				total_width += child_width;
 				used_width += child_width;
-				if (child_index == InternalChildren.Count - 1 || used_width > available_width) {
+				if (child_index == InternalChildren.Count - 1 || used_width + GetDesiredChildWidth(InternalChildren[child_index + 1]) > available_width) {
 					used_width = 0;
 					rows++;
 				}
 			}
+			double average_width = total_width / rows;
+			int selected_item_row = 0;
+			bool has_selection = false;
+			for (int child_index = 0; child_index < InternalChildren.Count; child_index++) {
+				UIElement child = InternalChildren[child_index];
+				TabItem tab_item = child as TabItem;
+				if (tab_item != null && tab_item.IsSelected) {
+					used_width = 0;
+					has_selection = true;
+					break;
+				}
+				double child_width = GetDesiredChildWidth(child);
+				used_width += child_width;
+				if (child_index == InternalChildren.Count - 1 || used_width > average_width || (used_width + GetDesiredChildWidth(InternalChildren[child_index + 1]) > available_width && used_width != 0)) {
+					selected_item_row++;
+					used_width = 0;
+				}
+			}
 			bool should_expand = rows != 1;
 			double used_height = 0;
+			int current_row = 0;
 			List<UIElement> current_row_elements = new List<UIElement>();
-			double average_width = total_width / rows;
 			for (int child_index = 0; child_index < InternalChildren.Count; child_index++) {
 				UIElement child = InternalChildren[child_index];
 				double child_width = GetDesiredChildWidth(child);
@@ -50,16 +68,24 @@ namespace System.Windows.Controls.Primitives {
 					else
 						width_ratio = 0;
 					used_width = 0;
+					double top = used_height;
+					if (has_selection) {
+						int offset = -selected_item_row - 1;
+						if (current_row <= selected_item_row)
+							offset += rows;
+						top += offset * row_height;
+					}
 					foreach (UIElement current_row_element in current_row_elements) {
 						child_width = GetDesiredChildWidth(current_row_element);
 						if (should_expand)
 							child_width *= width_ratio;
-						current_row_element.Arrange(horizontal ? new Rect(used_width, used_height, child_width, row_height) : new Rect(used_height, used_width, row_height, child_width));
+						current_row_element.Arrange(horizontal ? new Rect(used_width, top, child_width, row_height) : new Rect(top, used_width, row_height, child_width));
 						used_width += child_width;
 					}
 					current_row_elements.Clear();
 					used_width = 0;
 					used_height += row_height;
+					current_row++;
 				}
 			}
 			return finalSize;
@@ -76,11 +102,12 @@ namespace System.Windows.Controls.Primitives {
 			double height = 0;
 			int rows = 0;
 			bool limited_width = !double.IsPositiveInfinity(available_width) && double.IsPositiveInfinity(horizontal ? availableSize.Height : availableSize.Width);
+			foreach (UIElement child in InternalChildren)
+				child.Measure(availableSize);
 			for (int child_index = 0; child_index < InternalChildren.Count; child_index++) {
 				UIElement child = InternalChildren[child_index];
-				child.Measure(availableSize);
 				width += horizontal ? child.DesiredSize.Width : child.DesiredSize.Height;
-				if (limited_width && (width >= available_width || child_index == InternalChildren.Count - 1)) {
+				if (limited_width && (child_index == InternalChildren.Count - 1 || (width + GetDesiredChildWidth(InternalChildren[child_index + 1]) > available_width && width != 0))) {
 					width = 0;
 					rows++;
 				}
